--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "appverseClientIncubator",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {
     "angular": "~1.0.7",
     "json3": "~3.2.4",
@@ -9,7 +9,8 @@
     "es5-shim": "~2.0.8",
     "angular-resource": "~1.0.7",
     "angular-cookies": "~1.0.7",
-    "angular-sanitize": "~1.0.7"
+    "angular-sanitize": "~1.0.7",
+    "angular-bootstrap": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
