--- a/bower.json
+++ b/bower.json
@@ -2,15 +2,17 @@
   "name": "appverseClientIncubator",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "~1.0.7",
+    "angular": "~1.0.8",
     "json3": "~3.2.4",
-    "jquery": "~1.9.1",
+    "jquery": "~1.10.2",
     "bootstrap-sass": "~2.3.1",
     "es5-shim": "~2.0.8",
-    "angular-resource": "~1.0.7",
-    "angular-cookies": "~1.0.7",
-    "angular-sanitize": "~1.0.7",
-    "angular-bootstrap": "~0.6.0"
+    "angular-resource": "~1.0.8",
+    "angular-cookies": "~1.0.8",
+    "angular-sanitize": "~1.0.8",
+    "angular-bootstrap": "~0.6.0",
+    "angular-ui-router": "~0.2.0",
+    "modernizr": "~2.6.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
