--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,33 @@
 {
-  "name": "appverseClientIncubator",
+  "name": "appverseHTML5Incubator",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "~1.0.8",
+    "angular": "~1.2.0",
     "json3": "~3.2.4",
     "jquery": "~1.10.2",
     "bootstrap-sass": "~2.3.1",
     "es5-shim": "~2.0.8",
-    "angular-resource": "~1.0.8",
-    "angular-cookies": "~1.0.8",
-    "angular-sanitize": "~1.0.8",
+    "angular-resource": "~1.2.0",
+    "angular-cookies": "~1.2.0",
+    "angular-sanitize": "~1.2.0",
     "angular-bootstrap": "~0.6.0",
     "angular-ui-router": "~0.2.0",
+    "angular-socket-io": "~0.2.0",
+    "angular-translate": "~1.1.0",
+    "ng-oauth": "",
+    "ngstorage": "~0.3.0",
+    "restangular": "~1.1.8",
     "modernizr": "~2.6.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.8",
     "angular-scenario": "~1.0.8"
+  },
+  "resolutions": {
+    "angular": "~1.2.0",
+    "angular-resource": "~1.2.0",
+    "angular-sanitize": "~1.2.0",
+    "angular-cookies": "~1.2.0",
+    "jquery": "~1.10.2"
   }
 }
