--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appverse-client-incubator",
+  "name": "appverseHTML5Incubator",
   "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {
@@ -14,7 +14,7 @@
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-imagemin": "~0.2.0",
+    "grunt-contrib-imagemin": "~0.1.4",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-autoprefixer": "~0.2.0",
     "grunt-usemin": "~0.1.11",
