--- a/bower.json
+++ b/bower.json
@@ -12,12 +12,12 @@
     "angular-sanitize": "~1.2.1",
     "angular-bootstrap": "~0.6.0",
     "angular-ui-router": "~0.2.0",
-    "angular-socket-io": "~0.2.0",
     "angular-translate": "~1.1.0",
     "ng-oauth": "",
     "ngstorage": "~0.3.0",
     "restangular": "~1.1.8",
-    "modernizr": "~2.6.1"
+    "modernizr": "~2.6.1",
+    "stacktrace.js": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.8",
