--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,12 @@
     "angular-bootstrap": "~0.6.0",
     "angular-ui-router": "~0.2.0",
     "angular-translate": "~1.1.0",
+    "angular-translate-loader-static-files": "~0.1.6",
+    "angular-i18n" : "~1.0.8",
     "ng-oauth": "",
     "ngstorage": "~0.3.0",
     "restangular": "~1.1.8",
-    "modernizr": "~2.6.1",
-    "stacktrace.js": "~0.6.0"
+    "modernizr": "~2.6.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.8",
