- Renamed sonar id to html5-incubator - Added .sonar folder to GIT ignore

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # required metadata
-sonar.projectKey=my:incubator
+sonar.projectKey=my:html5-incubator
 sonar.projectName=HTML5 Incubator
 sonar.projectVersion=0.0.1
  
