--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular-translate": "~1.1.0",
     "angular-translate-loader-static-files": "~0.1.6",
     "angular-i18n" : "~1.0.8",
+    "angular-dynamic-locale" : "~0.0.2",
     "ng-oauth": "",
     "ngstorage": "~0.3.0",
     "restangular": "~1.1.8",
