--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "stacktrace": "~0.5.3",
     "ngstorage": "~0.3.0",
     "restangular": "~1.1.8",
+    "underscore": "~1.5.2",
     "modernizr": "~2.6.1"
   },
   "devDependencies": {
