--- a/bower.json
+++ b/bower.json
@@ -14,15 +14,16 @@
     "angular-ui-router": "~0.2.0",
     "angular-translate": "~1.1.0",
     "angular-translate-loader-static-files": "~0.1.6",
-    "angular-i18n" : "~1.0.8",
-    "angular-dynamic-locale" : "~0.0.2",
+    "angular-i18n": "~1.0.8",
+    "angular-dynamic-locale": "~0.0.2",
     "angular-socket-io": "~0.2.0",
     "ng-oauth": "",
     "stacktrace": "~0.5.3",
     "ngstorage": "~0.3.0",
     "restangular": "~1.1.8",
     "underscore": "~1.5.2",
-    "modernizr": "~2.6.1"
+    "modernizr": "~2.6.1",
+    "angular-cache": "~2.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.8",
