--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,7 @@
         "angular-cache": "2.1.1",
         "angular-animate": "1.2.1",
         "angular-touch": "1.2.1",
-        "angular-route": "1.2.1",
-        "ngstorage": "0.3.0"
+        "angular-route": "1.2.1"
     },
     "devDependencies": {
         "angular-mocks": "1.0.8",
