--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "karma-phantomjs-launcher": "~0.1.0",
     "karma": "~0.10.2",
     "karma-ng-html2js-preprocessor": "~0.1.0",
-    "karma-coverage": "~0.1.4"
+    "karma-coverage": "~0.1.4",
+    "grunt-jsdoc": "~0.5.1"
   },
   "engines": {
     "node": ">=0.8.0"
