--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,9 @@
     "angular": "1.2.1",
     "json3": "3.2.4",
     "jquery": "1.10.2",
+    "jquery-ui": "1.10.3",
+    "jquery-cookie": "1.3.1",
+    "jquery-flot": "0.8.2",
     "bootstrap-sass": "2.3.1",
     "es5-shim": "2.0.8",
     "angular-cookies": "1.2.1",
@@ -30,6 +33,7 @@
   "resolutions": {
     "angular": "1.2.1",
     "angular-translate": "1.1.0",
-    "jquery": "1.10.2"
+    "jquery": "1.10.2",
+    "jquery-ui": "~1.10.4"
   }
 }
