- Added angular-jqm and jequery mobile CSS to exclusion list

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectDescription=HTML5 Incubator description
 # path to source directories (required)
 sonar.sources=.
 
-sonar.exclusions=file:**/bower_components/**,**/dist/**,**/unity.js,**/bootstrap.css
+sonar.exclusions=file:**/bower_components/**,**/dist/**,**/unity.js,**/bootstrap.css,**/jquery.mobile.css,**/angular-jqm.css
 
 # path to test source directories (optional)
 sonar.tests=
