--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "grunt-rev": "~0.1.0",
         "grunt-open": "~0.2.0",
         "grunt-concurrent": "~0.3.0",
+        "grunt-shell": "~0.2.2",
         "load-grunt-tasks": "~0.1.0",
         "connect-livereload": "~0.2.0",
         "grunt-google-cdn": "~0.2.0",
@@ -34,7 +35,7 @@
         "karma-firefox-launcher": "~0.1.0",
         "karma-html2js-preprocessor": "~0.1.0",
         "karma-jasmine": "~0.1.3",
-        "karma-requirejs": "~0.1.0",
+        "karma-requirejs": "~0.2.0",
         "karma-coffee-preprocessor": "~0.1.0",
         "karma-phantomjs-launcher": "~0.1.0",
         "karma": "~0.10.2",
