--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
         "grunt-contrib-cssmin": "~0.6.0",
         "grunt-contrib-connect": "~0.3.0",
         "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-htmlmin": "~0.1.3",
+        "grunt-contrib-htmlmin": "~0.3",
         "grunt-contrib-imagemin": "~0.1.4",
         "grunt-contrib-watch": "~0.5.2",
         "grunt-autoprefixer": "~0.2.0",
-        "grunt-usemin": "~0.1.11",
+        "grunt-usemin": "~2.1.1",
         "grunt-svgmin": "~0.2.0",
         "grunt-rev": "~0.1.0",
         "grunt-open": "~0.2.0",
@@ -25,7 +25,7 @@
         "load-grunt-tasks": "~0.1.0",
         "connect-livereload": "~0.2.0",
         "grunt-google-cdn": "~0.2.0",
-        "grunt-ngmin": "~0.0.2",
+        "grunt-ng-annotate": "~0.1",
         "time-grunt": "~0.1.0",
         "karma-ng-scenario": "~0.1.0",
         "grunt-karma": "~0.6.2",
@@ -34,7 +34,7 @@
         "karma-firefox-launcher": "~0.1.0",
         "karma-html2js-preprocessor": "~0.1.0",
         "karma-jasmine": "~0.1.3",
-        "karma-requirejs": "~0.1.0",
+        "karma-requirejs": "~0.2.0",
         "karma-coffee-preprocessor": "~0.1.0",
         "karma-phantomjs-launcher": "~0.1.0",
         "karma": "~0.10.2",
