- Fixed rev task excluding glyphicons - Added gif,svg and removed png from imagemin - Added tinypng plugin - Removed svgmin plugin - Added copy:png target - Optimized png images

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "grunt-contrib-watch": "~0.5.2",
         "grunt-autoprefixer": "~0.2.0",
         "grunt-usemin": "~2.1.1",
-        "grunt-svgmin": "~0.2.0",
+        "grunt-tinypng":"~0.5",
         "grunt-rev": "~0.1.0",
         "grunt-open": "~0.2.0",
         "grunt-concurrent": "~0.3.0",
