--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-cache": "2.1.1",
     "angular-animate": "1.2.1",
     "angular-touch": "1.2.1",
-    "angular-route": "1.2.1"
+    "angular-route": "1.2.1",
+    "ng-grid": "2.0.11"
   },
   "devDependencies": {
     "angular-mocks": "1.0.8",
