--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular-cache": "2.1.1",
     "angular-animate": "1.2.1",
     "angular-touch": "1.2.1",
-    "angular-route": "1.2.1"
+    "angular-route": "1.2.1",
+    "venturocket-angular-slider": "~0.3.2"
   },
   "devDependencies": {
     "angular-mocks": "1.0.8",
