--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-animate": "1.2.1",
     "angular-touch": "1.2.1",
     "angular-route": "1.2.1",
-    "venturocket-angular-slider": "~0.3.2"
+    "venturocket-angular-slider": "~0.3.2",
+    "angular-qr": "~0.1.4"
   },
   "devDependencies": {
     "angular-mocks": "1.0.8",
