--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "angular": "1.2.1",
     "json3": "3.2.4",
     "jquery": "1.10.2",
-    "jquery-flot": "0.8.2",
+    "jquery-flot": "0.8.3",
     "bootstrap-sass": "2.3.1",
     "es5-shim": "2.0.8",
     "angular-cookies": "1.2.1",
@@ -24,7 +24,8 @@
     "angular-touch": "1.2.1",
     "angular-route": "1.2.1",
     "venturocket-angular-slider": "~0.3.2",
-    "angular-qr": "~0.1.4"
+    "angular-qr": "~0.1.4",
+    "angular-xeditable": "~0.1.8"
   },
   "devDependencies": {
     "angular-mocks": "1.0.8",
