Changes for the translation module and components.

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "appverseHTML5Incubator",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "dependencies": {
     "angular": "1.2.1",
     "json3": "3.2.4",
@@ -12,7 +12,7 @@
     "angular-sanitize": "1.2.1",
     "angular-bootstrap": "0.6.0",
     "angular-ui-router": "0.2.8-bowratic-tedium",
-    "angular-translate": "1.1.0",
+    "angular-translate": "2.1.0",
     "angular-translate-loader-static-files": "0.1.6",
     "angular-i18n": "1.0.8",
     "angular-dynamic-locale": "0.0.2",
@@ -34,7 +34,8 @@
   },
   "resolutions": {
     "angular": "1.2.1",
-    "angular-translate": "~1.1.1",
-    "jquery": "1.10.2"
+    "angular-translate": "2.1.0",
+    "jquery": "1.10.2",
+    "angular-bootstrap": "0.11.x"
   }
 }
