--- a/.jshintrc
+++ b/.jshintrc
@@ -1,25 +1,35 @@
 {
-  "node": true,
-  "browser": true,
-  "jquery": true,
-  "esnext": true,
-  "bitwise": true,
-  "curly": true,
-  "eqeqeq": true,
-  "immed": true,
-  "indent": 4,
-  "latedef": true,
-  "newcap": true,
-  "noarg": true,
-  "regexp": true,
-  "undef": true,
-  "unused": true,
-  "strict": true,
-  "trailing": true,
-  "smarttabs": true,
-  "globals": {
-    "angular": false,
-    "alert": false,
-    "Unity": false
-  }
+    "node": true,
+    "browser": true,
+    "jquery": true,
+    "esnext": true,
+    "bitwise": true,
+    "curly": true,
+    "eqeqeq": true,
+    "immed": true,
+    "indent": 4,
+    "latedef": true,
+    "newcap": true,
+    "noarg": true,
+    "regexp": true,
+    "undef": true,
+    "unused": true,
+    "strict": true,
+    "trailing": true,
+    "smarttabs": true,
+    "globals": {
+        "angular": false,
+        "alert": false,
+        "Unity": false,
+        "describe": false,
+        "it": false,
+        "inject": false,
+        "module": false,
+        "expect": false,
+        "should": false,
+        "before": false,
+        "beforeEach": false,
+        "after": false,
+        "afterEach": false
+    }
 }
