--- a/.jshintrc
+++ b/.jshintrc
@@ -30,6 +30,7 @@
         "before": false,
         "beforeEach": false,
         "after": false,
-        "afterEach": false
+        "afterEach": false,
+        "browser": false
     }
 }
