--- a/bower.json
+++ b/bower.json
@@ -4,18 +4,18 @@
   "dependencies": {
     "angular": "1.2.20",
     "json3": "3.2.4",
-    "jquery": "1.10.2",
+    "jquery": "2.1.1",
     "jquery-flot": "0.8.3",
     "bootstrap-sass": "3.0.2",
     "es5-shim": "2.0.8",
     "angular-cookies": "1.2.20",
     "angular-sanitize": "1.2.20",
-    "angular-bootstrap": "0.11.0",
+    "angular-bootstrap": "~0.11.0",
     "angular-ui-router": "0.2.8-bowratic-tedium",
     "angular-translate": "~1.1.0",
     "angular-translate-loader-static-files": "0.1.6",
     "angular-i18n": "1.0.8",
-    "angular-dynamic-locale": "0.0.2",
+    "angular-dynamic-locale": "0.1.17",
     "angular-resource": "1.2.20",
     "restangular": "1.2.0",
     "modernizr": "2.6.1",
@@ -38,7 +38,7 @@
   "resolutions": {
     "angular": "1.2.20",
     "angular-mocks": "1.2.20",
-    "jquery": ">= 1.2.6",
+    "jquery": "2.1.1",
     "bootstrap-sass": "3.0.2",
     "angular-cookies": "1.2.20",
     "angular-sanitize": "1.2.20",
@@ -47,6 +47,7 @@
     "angular-resource": "1.2.20",
     "angular-route": "1.2.20",
     "angular-animate": "1.2.20",
-    "appverse-web-html5-core": "~0.2.1"
+    "appverse-web-html5-core": "~0.2.1",
+    "angular-dynamic-locale": "0.1.17"
   }
 }
