--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "dependencies": {
         "angular": "1.2.20",
         "json3": "3.2.4",
-        "jquery": "1.10.2",
+        "jquery": "2.1.1",
         "jquery-flot": "0.8.3",
         "bootstrap-sass": "3.0.2",
         "es5-shim": "2.0.8",
@@ -12,10 +12,10 @@
         "angular-sanitize": "1.2.20",
         "angular-bootstrap": "0.11.0",
         "angular-ui-router": "0.2.8-bowratic-tedium",
-        "angular-translate": "1.1.0",
+        "angular-translate": "1.1.1",
         "angular-translate-loader-static-files": "0.1.6",
         "angular-i18n": "1.0.8",
-        "angular-dynamic-locale": "0.0.2",
+        "angular-dynamic-locale": "~0.1.17",
         "angular-resource": "1.2.20",
         "restangular": "1.2.0",
         "modernizr": "2.6.1",
@@ -26,7 +26,7 @@
         "venturocket-angular-slider": "0.3.2",
         "angular-qr": "0.1.4",
         "angular-xeditable": "0.1.8",
-        "ng-grid": "2.0.11",
+        "ng-grid": "2.0.13",
         "socket.io-client": "0.9.16"
     },
     "devDependencies": {
