--- a/bower.json
+++ b/bower.json
@@ -1,40 +1,41 @@
 {
-    "name": "appverseHTML5Incubator",
-    "version": "0.3.0",
-    "dependencies": {
-        "angular": "1.2.20",
-        "json3": "3.2.4",
-        "jquery": "1.10.2",
-        "jquery-flot": "0.8.3",
-        "bootstrap-sass": "3.0.2",
-        "es5-shim": "2.0.8",
-        "angular-cookies": "1.2.20",
-        "angular-sanitize": "1.2.20",
-        "angular-bootstrap": "0.11.0",
-        "angular-ui-router": "0.2.8-bowratic-tedium",
-        "angular-translate": "1.1.0",
-        "angular-translate-loader-static-files": "0.1.6",
-        "angular-i18n": "1.0.8",
-        "angular-dynamic-locale": "0.0.2",
-        "angular-resource": "1.2.20",
-        "restangular": "1.2.0",
-        "modernizr": "2.6.1",
-        "angular-cache": "2.3.3",
-        "angular-animate": "1.2.20",
-        "angular-touch": "1.2.20",
-        "angular-route": "1.2.20",
-        "venturocket-angular-slider": "0.3.2",
-        "angular-qr": "0.1.4",
-        "angular-xeditable": "0.1.8",
-        "ng-grid": "2.0.11",
-        "socket.io-client": "0.9.16"
-    },
-    "devDependencies": {
-        "angular-mocks": "1.2.20",
-        "angularjs-scope.safeapply": "*"
-    },
-    "resolutions": {
-        "angular": "1.2.20",
-        "angular-mocks": "1.2.20"
-    }
+  "name": "appverseHTML5Incubator",
+  "version": "0.3.0",
+  "dependencies": {
+    "angular": "1.2.20",
+    "json3": "3.2.4",
+    "jquery": "1.10.2",
+    "jquery-flot": "0.8.3",
+    "bootstrap-sass": "3.0.2",
+    "es5-shim": "2.0.8",
+    "angular-cookies": "1.2.20",
+    "angular-sanitize": "1.2.20",
+    "angular-bootstrap": "0.11.0",
+    "angular-ui-router": "0.2.8-bowratic-tedium",
+    "angular-translate": "1.1.0",
+    "angular-translate-loader-static-files": "0.1.6",
+    "angular-i18n": "1.0.8",
+    "angular-dynamic-locale": "0.0.2",
+    "angular-resource": "1.2.20",
+    "restangular": "1.2.0",
+    "modernizr": "2.6.1",
+    "angular-cache": "2.3.3",
+    "angular-animate": "1.2.20",
+    "angular-touch": "1.2.20",
+    "angular-route": "1.2.20",
+    "venturocket-angular-slider": "0.3.2",
+    "angular-qr": "0.1.4",
+    "angular-xeditable": "0.1.8",
+    "ng-grid": "2.0.11",
+    "socket.io-client": "0.9.16"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.2.20",
+    "angularjs-scope.safeapply": "*"
+  },
+  "resolutions": {
+    "angular": "1.2.20",
+    "angular-mocks": "1.2.20",
+    "angular-translate": "~1.1.1"
+  }
 }
