--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ app/bower_components
 .sonar/
 coverage/
 doc/
+app/styles/bootstrap.css
+app/styles/fade.css
+app/styles/grid.css
+app/styles/main.css
