--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
         "json3": "3.2.4",
         "jquery": "1.10.2",
         "jquery-flot": "0.8.3",
-        "bootstrap-sass": "3.0.2",
+        "bootstrap-sass-official": "~3.0.2",
         "es5-shim": "2.0.8",
         "angular-cookies": "1.2.20",
         "angular-sanitize": "1.2.20",
