--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bower": "^1.3.12",
     "chai": "1.4.0",
     "connect-livereload": "0.2.0",
+    "esutils": "^1.1.6",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "0.2.0",
     "grunt-cli": "^0.1.13",
