--- a/.jshintrc
+++ b/.jshintrc
@@ -1,36 +1,28 @@
 {
-    "node": true,
-    "browser": true,
-    "jquery": true,
-    "esnext": true,
     "bitwise": true,
     "curly": true,
     "eqeqeq": true,
-    "immed": true,
-    "indent": 4,
-    "latedef": true,
-    "newcap": true,
-    "noarg": true,
-    "regexp": true,
-    "undef": true,
-    "unused": true,
-    "strict": true,
-    "trailing": true,
-    "smarttabs": true,
+    "forin": true,
+    "futurehostile": true,
     "globals": {
         "angular": false,
-        "alert": false,
-        "Unity": false,
-        "describe": false,
-        "it": false,
-        "inject": false,
-        "module": false,
-        "expect": false,
-        "should": false,
-        "before": false,
-        "beforeEach": false,
-        "after": false,
-        "afterEach": false,
-        "browser": false
-    }
+        "Appverse": false
+    },
+    "immed": true,
+    "indent": 4,
+    "latedef": "nofunc",
+    "newcap": true,
+    "noarg": true,
+    "nocomma": true,
+    "noempty": true,
+    "nonbsp": true,
+    "nonew": true,
+    "singleGroups": true,
+    "undef": true,
+    "unused": true,
+    "esnext": true,
+    "strict": true,
+    "browser": true,
+    "jasmine": true,
+    "jquery": true
 }
