--- a/bower.json
+++ b/bower.json
@@ -1,41 +1,22 @@
 {
-    "name": "appverseHTML5Incubator",
-    "version": "0.3.0",
+    "name": "showcase",
+    "version": "0.0.1",
     "dependencies": {
-        "angular": "1.2.20",
-        "json3": "3.2.4",
-        "jquery": "1.10.2",
-        "jquery-flot": "0.8.3",
-        "bootstrap-sass-official": "~3.0.2",
-        "es5-shim": "2.0.8",
-        "angular-cookies": "1.2.20",
-        "angular-sanitize": "1.2.20",
-        "angular-bootstrap": "0.11.0",
-        "angular-ui-router": "0.2.8-bowratic-tedium",
-    "angular-translate": "1.1.1",
-        "angular-translate-loader-static-files": "0.1.6",
-        "angular-i18n": "1.0.8",
-        "angular-dynamic-locale" : "0.1.21",
-        "angular-resource": "1.2.20",
-        "restangular": "1.2.0",
-        "modernizr": "2.6.1",
-        "angular-cache": "2.3.3",
-        "angular-animate": "1.2.20",
-        "angular-touch": "1.2.20",
-        "angular-route": "1.2.20",
-        "venturocket-angular-slider": "0.3.2",
-        "angular-qr": "0.1.4",
-        "angular-xeditable": "0.1.8",
-        "ng-grid": "2.0.14",
-        "socket.io-client": "0.9.16"
+        "appverse-web-html5-core": "~0.5.0",
+        "appverse-web-html5-security": "~0.5.0",
+        "appverse-web-html5-ui": "~0.5.0",
+        "angular-ripple": "*",
+        "angular-ui-select": "~0.12.0",
+        "angularjs-slider": "~0.1.21",
+        "angular-resize": "~1.0.0",
+        "selectize": "~0.12.1",
+        "angular-chart.js": "~0.7.2"
     },
     "devDependencies": {
-        "angular-mocks": "1.2.20",
-        "angularjs-scope.safeapply": "*"
+        "angular-mocks": "1.3.15"
     },
     "resolutions": {
-        "angular": "1.2.20",
-        "angular-mocks": "1.2.20",
-        "angular-translate": "~1.1.1"
+        "angular": "1.3.15",
+        "angular-touch": ">=1.3.*"
     }
 }
