--- a/package.json
+++ b/package.json
@@ -1,61 +1,56 @@
 {
-  "name": "appverseHTML5Incubator",
-  "version": "0.3.0",
+  "name": "showcase",
+  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "user/repo"
+  },
   "devDependencies": {
-    "bower": "^1.3.12",
-    "chai": "1.4.0",
-    "connect-livereload": "0.2.0",
-    "esutils": "^1.1.6",
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "0.2.0",
-    "grunt-cli": "^0.1.13",
-    "grunt-concurrent": "0.3.0",
-    "grunt-contrib-clean": "0.5.0",
-    "grunt-contrib-concat": "0.3.0",
-    "grunt-contrib-connect": "0.3.0",
-    "grunt-contrib-copy": "0.4.1",
-    "grunt-contrib-cssmin": "0.6.0",
-    "grunt-contrib-htmlmin": "0.3",
-    "grunt-contrib-imagemin": "0.1.4",
-    "grunt-contrib-jshint": "0.6.5",
-    "grunt-contrib-uglify": "0.2.0",
-    "grunt-contrib-watch": "0.5.2",
-    "grunt-docular": "0.1.2",
-    "grunt-google-cdn": "0.2.0",
-    "grunt-istanbul": "0.3.0",
-    "grunt-karma": "0.8",
-    "grunt-license": "^0.1.5",
-    "grunt-ng-annotate": "0.1",
-    "grunt-open": "0.2.0",
-    "grunt-protractor-coverage": "0.2.10",
-    "grunt-protractor-webdriver": "0.1.8",
+    "grunt": "0.4.5",
+    "grunt-autoprefixer": "3.0.0",
+    "grunt-concurrent": "1.0.0",
+    "grunt-connect-proxy": "0.1.10",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-coffee": "0.13.0",
+    "grunt-contrib-concat": "0.5.1",
+    "grunt-contrib-connect": "0.10.1",
+    "grunt-contrib-copy": "0.8.0",
+    "grunt-contrib-cssmin": "0.12.2",
+    "grunt-contrib-htmlmin": "0.4.0",
+    "grunt-contrib-jshint": "0.11.2",
+    "grunt-contrib-uglify": "0.9.1",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-istanbul": "^0.6.1",
+    "grunt-karma": "0.10.1",
+    "grunt-license-report": "0.0.8",
+    "grunt-ng-annotate": "0.10.0",
+    "grunt-open": "0.2.3",
     "grunt-rev": "0.1.0",
-    "grunt-sass": "^0.17.0",
-    "grunt-shell": "0.2.2",
-    "grunt-tinypng": "0.5",
-    "grunt-usemin": "2.1.1",
-    "jasmine-reporters": "^1.0.1",
-    "karma": "0.12",
-    "karma-coverage": "0.2.4",
-    "karma-junit-reporter": "0.2.2",
-    "karma-mocha": "0.1.6",
-    "karma-ng-html2js-preprocessor": "0.1.0",
-    "karma-phantomjs-launcher": "0.1",
-    "karma-requirejs": "0.2.0",
-    "karma-script-launcher": "0.1.0",
-    "load-grunt-tasks": "0.1.0",
-    "mockjaxify": "0.0.1",
-    "ng-midway-tester": "2.0.5",
-    "phantomjs": "1.9.9",
-    "protractor": "0.24.2",
-    "time-grunt": "0.1.0"
+    "grunt-sass": "0.18.1",
+    "grunt-shell": "^1.1.2",
+    "grunt-usemin": "3.0.0",
+    "istanbul": "^0.3.17",
+    "jasmine-core": "2.2.0",
+    "jasmine-reporters": "^2.0.7",
+    "karma": "0.12.31",
+    "karma-chrome-launcher": "0.1.8",
+    "karma-coverage": "0.3.1",
+    "karma-jasmine": "0.3.5",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "0.1.4",
+    "load-grunt-configs": "0.4.3",
+    "load-grunt-tasks": "3.1.0",
+    "lodash": "3.7.0",
+    "protractor": "^2.1.0",
+    "q": "^1.4.1",
+    "time-grunt": "1.1.1"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.12.0",
+    "npm": ">=1.4.5"
   },
-  "dependencies": {
-    "grunt-license": "^0.1.5",
-    "treeify": "^1.0.1",
-    "webdriver-manager": "0.0.8"
+  "scripts": {
+    "postinstall": "node node_modules/protractor/bin/webdriver-manager update --ie",
+    "test": "grunt test"
   }
 }
