--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,25 +1,25 @@
 # required metadata
-sonar.projectKey=my:html5-incubator
-sonar.projectName=HTML5 Incubator
+sonar.projectKey=my:showcase
+sonar.projectName=showcase
 sonar.projectVersion=0.0.1
- 
+
 # optional description
-sonar.projectDescription=HTML5 Incubator description
+sonar.projectDescription=showcase
 
 # path to source directories (required)
 sonar.sources=.
 
-sonar.exclusions=file:**/bower_components/**,**/dist/**,**/unity.js,**/bootstrap.css,**/jquery.mobile.css,**/angular-jqm.css
+sonar.exclusions=file:**/bower_components/**,**/bootstrap.css
 
 # path to test source directories (optional)
 sonar.tests=
 
 # path to project binaries (optional), for example directory of Java bytecode
 sonar.binaries=
- 
+
 # optional comma-separated list of paths to libraries. Only path to JAR file is supported.
 sonar.libraries=
- 
+
 # The value of the property must be the key of the language.
 sonar.language=web
 
