- Added protractor variables to global JSHint - Removed unused mobile demo - Readded unit test - Changed e2e browser to phantomJS

--- a/.jshintrc
+++ b/.jshintrc
@@ -6,7 +6,11 @@
     "futurehostile": true,
     "globals": {
         "angular": false,
-        "Appverse": false
+        "Appverse": false,
+        "browser": false,
+        "element": false,
+        "by": false,
+        "protractor": false
     },
     "immed": true,
     "indent": 4,
