--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "load-grunt-configs": "0.4.3",
     "load-grunt-tasks": "3.1.0",
     "lodash": "3.7.0",
+    "phantomjs": "~1.9",
     "protractor": "^2.1.0",
     "q": "^1.4.1",
     "time-grunt": "1.1.1"
