--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "url": "user/repo"
   },
   "devDependencies": {
+    "chai": "^3.2.0",
+    "cucumber": "^0.5.2",
     "grunt": "0.4.5",
     "grunt-autoprefixer": "3.0.0",
     "grunt-concurrent": "1.0.0",
