--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "chai": "^3.2.0",
+    "chai-as-promised": "^5.1.0",
     "cucumber": "^0.5.2",
     "grunt": "0.4.5",
     "grunt-autoprefixer": "3.0.0",
