Moved all test reports to report folder Fixed cleaning report folder Added appverse-core files to e2e coverage report Refactored test tasks

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
-node_modules
-dist
-.tmp
-.sass-cache
-licenses.json
-app/bower_components
-/nbproject
 /.idea/
-.sonar/
-coverage/
-doc/
-app/styles/bootstrap.css
-app/styles/fade.css
-app/styles/grid.css
-app/styles/main.css
-test/reports/
+/.sass-cache/
+/.sonar/
+/.tmp/
+/app/bower_components/
+/app/styles/bootstrap.css
+/app/styles/fade.css
+/app/styles/grid.css
+/app/styles/main.css
+/dist/
+/doc/
+/licenses.json
+/nbproject
+/node_modules/
+/reports/
