--- a/bower.json
+++ b/bower.json
@@ -2,18 +2,19 @@
   "name": "showcase",
   "version": "0.0.1",
   "dependencies": {
-    "appverse-web-html5-core": "~0.5.0",
-    "appverse-web-html5-security": "~0.5.0",
-    "appverse-web-html5-ui": "~0.5.0",
+    "angular-bootstrap": "~0.13.1",
+    "angular-chart.js": "~0.7.2",
+    "angular-highlightjs": "~0.4.3",
+    "angular-resize": "~1.0.0",
     "angular-ripple": "*",
     "angular-ui-select": "~0.12.0",
     "angularjs-slider": "~0.1.21",
-    "angular-resize": "~1.0.0",
-    "selectize": "~0.12.1",
-    "angular-chart.js": "~0.7.2",
-    "angular-highlightjs": "~0.4.3",
+    "appverse-web-html5-core": "~0.5.0",
+    "appverse-web-html5-security": "~0.5.0",
+    "appverse-web-html5-ui": "~0.5.0",
     "highlightjs": "~8.6.0",
-    "angular-bootstrap": "~0.13.1"
+    "IndexedDBShim": "~2.2.1",
+    "selectize": "~0.12.1"
   },
   "devDependencies": {
     "angular-mocks": "1.3.15"
