--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "load-grunt-configs": "0.4.3",
     "load-grunt-tasks": "3.1.0",
     "lodash": "3.7.0",
-    "phantomjs": "~1.9",
+    "phantomjs": "^1.9.18",
     "protractor": "^2.5.1",
     "q": "^1.4.1",
     "time-grunt": "1.1.1"
