--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "angular-bootstrap": "~0.13.1",
     "angular-chart.js": "~0.7.2",
-    "angular-highlightjs": "~0.4.3",
+    "angular-highlightjs": "~0.5.1",
     "angular-resize": "~1.0.0",
     "angular-ripple": "*",
     "angular-ui-select": "~0.12.0",
@@ -22,6 +22,7 @@
   "resolutions": {
     "angular": "1.3.15",
     "angular-bootstrap": "~0.13.1",
-    "angular-touch": "~1.3.15"
+    "angular-touch": "~1.3.15",
+    "angular-highlightjs": "~0.5.1"
   }
 }
