--- a/bower.json
+++ b/bower.json
@@ -14,15 +14,15 @@
     "appverse-web-html5-ui": "~0.5.0",
     "highlightjs": "~8.6.0",
     "IndexedDBShim": "~2.2.1",
-    "selectize": "~0.12.1"
+    "selectize": "~0.12.1",
+    "stomp-websocket": "~2.3.4",
+    "sockjs-client": "~1.0.3"
   },
   "devDependencies": {
     "angular-mocks": "1.3.15"
   },
   "resolutions": {
     "angular": "1.3.15",
-    "angular-bootstrap": "~0.13.1",
-    "angular-touch": "~1.3.15",
-    "angular-highlightjs": "~0.5.1"
+    "angular-touch": "~1.3.15"
   }
 }
