--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,8 @@
   },
   "resolutions": {
     "angular": "1.3.15",
-    "angular-touch": "~1.3.15"
+    "angular-touch": "~1.3.15",
+    "sockjs-client": "~1.0.3",
+    "angular-bootstrap": "~0.13.1"
   }
 }
