--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,27 +1,27 @@
 # required metadata
-sonar.projectKey=my:html5-incubator
-sonar.projectName=HTML5 Incubator
+sonar.projectKey=appverse-web-html5
+sonar.projectName=html5-showcase
 sonar.projectVersion=0.0.1
- 
+
 # optional description
-sonar.projectDescription=HTML5 Incubator description
+sonar.projectDescription=html5 showcase frontend
 
 # path to source directories (required)
-sonar.sources=.
+#sonar.sources=.
 
-sonar.exclusions=file:**/bower_components/**,**/dist/**,**/unity.js,**/bootstrap.css,**/jquery.mobile.css,**/angular-jqm.css
+sonar.exclusions=file:**/bower_components/**,**/dist/**,**/unity.js,**/bootstrap.css
 
 # path to test source directories (optional)
 sonar.tests=
 
 # path to project binaries (optional), for example directory of Java bytecode
 sonar.binaries=
- 
+
 # optional comma-separated list of paths to libraries. Only path to JAR file is supported.
 sonar.libraries=
- 
+
 # The value of the property must be the key of the language.
-sonar.language=web
+#sonar.language=web
 
 # Encoding of sources files
 sonar.sourceEncoding=UTF-8
@@ -31,17 +31,21 @@ sonar.sourceEncoding=UTF-8
 
 sonar.modules=html-module,javascript-module,css-module
 
+
 # HTML module
 html-module.sonar.projectName=HTML Module
 #html-module.sonar.language=web => inherited from the sonar.language project property
-html-module.sonar.projectBaseDir=app
+html-module.sonar.projectBaseDir=.
+html-module.sonar.sources=app
 
 # JavaScript module
 javascript-module.sonar.projectName=JavaScript Module
 javascript-module.sonar.language=js
-javascript-module.sonar.projectBaseDir=app/scripts
+javascript-module.sonar.projectBaseDir=.
+javascript-module.sonar.sources=app
 
 # CSS module
 css-module.sonar.projectName=CSS Module
 css-module.sonar.language=css
-css-module.sonar.projectBaseDir=.tmp
+css-module.sonar.projectBaseDir=.
+css-module.sonar.sources=.tmp
