--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "grunt-ng-annotate": "0.10.0",
     "grunt-open": "0.2.3",
     "grunt-rev": "0.1.0",
-    "grunt-sass": "0.18.1",
+    "grunt-sass": "^1.1.0",
     "grunt-shell": "^1.1.2",
     "grunt-usemin": "3.0.0",
     "istanbul": "^0.3.17",
