--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,12 @@
     "selectize": "~0.12.1",
     "angular-xeditable": "~0.1.9",
     "angular-qr": "~0.2.0",
-    "ng-grid": "2.0.14"
+    "ng-grid": "2.0.14",
+    "bootstrap-sass": "~3.3.6",
+    "angular-bootstrap": "~1.0.3",
+    "angular-animate": "~1.4.8",
+    "angular-touch": "~1.4.8",
+    "angular-sanitize": "~1.4.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.8"
