--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-bootstrap": "~1.0.3",
     "angular-animate": "~1.4.8",
     "angular-touch": "~1.4.8",
-    "angular-sanitize": "~1.4.8"
+    "angular-sanitize": "~1.4.8",
+    "ng-webworker": "~0.2.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.8"
