--- a/bower.json
+++ b/bower.json
@@ -20,12 +20,16 @@
     "angular-animate": "~1.4.8",
     "angular-touch": "~1.4.8",
     "angular-sanitize": "~1.4.8",
-    "ng-webworker": "~0.2.2"
+    "ng-webworker": "~0.2.2",
+    "ionic": "^1.2.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.8"
   },
   "resolutions": {
-    "angular": "~1.4.8"
+    "angular": "~1.4.8",
+    "angular-ui-router": "~0.2.15",
+    "angular-animate": "~1.4.8",
+    "angular-sanitize": "~1.4.8"
   }
 }
