--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-touch": "~1.4.8",
     "angular-sanitize": "~1.4.8",
     "ng-webworker": "~0.2.2",
-    "ionic": "^1.2.4"
+    "ionic": "^1.2.4",
+    "ngclipboard": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.8"
