--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,9 @@
     "ng-webworker": "~0.2.2",
     "ionic": "^1.2.4",
     "ag-grid": "^3.3.3",
-    "ngclipboard": "~1.1.0"
+    "ngclipboard": "~1.1.0",
+    "es5-shim": "^4.5.5",
+    "json3": "^3.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.8"
