--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "ag-grid": "^3.3.3",
     "ngclipboard": "~1.1.0",
     "es5-shim": "^4.5.5",
-    "json3": "^3.3.2"
+    "json3": "^3.3.2",
+    "appverse-bootstrap-sass-theme": "^0.0.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.8"
