--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,11 @@
     "angular-resize": "~1.0.0",
     "angular-ripple": "*",
     "angular-ui-select": "~0.12.0",
+    "angular-resource": "1.5.8",
+    "angular-cookies": "1.5.8",
     "angularjs-slider": "~0.1.21",
     "appverse-web-html5-core": "~0.8.0",
+    "appverse-web-html5-security": "~0.5.1",
     "highlightjs": "~8.6.0",
     "IndexedDBShim": "~2.2.1",
     "selectize": "~0.12.1",
@@ -17,9 +20,9 @@
     "ng-grid": "2.0.14",
     "bootstrap-sass": "~3.3.6",
     "angular-bootstrap": "~1.0.3",
-    "angular-animate": "~1.4.8",
-    "angular-touch": "~1.4.8",
-    "angular-sanitize": "~1.4.8",
+    "angular-animate": "~1.5.8",
+    "angular-touch": "~1.5.8",
+    "angular-sanitize": "~1.5.8",
     "ng-webworker": "~0.2.2",
     "ionic": "^1.2.4",
     "ag-grid": "^3.3.3",
@@ -32,9 +35,9 @@
     "angular-mocks": "~1.4.8"
   },
   "resolutions": {
-    "angular": "~1.4.8",
+    "angular": "~1.5.8",
     "angular-ui-router": "~0.2.15",
-    "angular-animate": "~1.4.8",
-    "angular-sanitize": "~1.4.8"
+    "angular-animate": "~1.5.8",
+    "angular-sanitize": "~1.5.8"
   }
 }
